--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test:unit": "jest"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
