--- a/package.json
+++ b/package.json
@@ -2,21 +2,27 @@
   "name": "my-vue-app",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test:unit": "jest"
+    "test:unit": "jest",
+    "test": "jest"
   },
   "dependencies": {
     "vue": "^3.3.4",
     "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-react": "^7.22.15",
+    "@babel/preset-typescript": "^7.23.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/test-utils": "^2.4.1",
     "@vue/vue3-jest": "^29.2.6",
+    "babel-jest": "^29.7.0",
     "vite": "^4.4.5"
   }
 }
