--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vue/test-utils": "^2.4.1",
     "@vue/vue3-jest": "^29.2.6",
     "babel-jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "vite": "^4.4.5"
   }
 }
